@@ -16,9 +16,6 @@ Java 9 migration:
 
 - Add an update notification when a new SportsTracker version has been released
 
-ExerciseViewer Diagram panel:
-- Issue #162: ExerciseViewer Diagram panel: display average line for heartrate and other data
-
 JavaFX Migration:
 - Migration status: completed, Swing is not in use anymore
 - tested on macOS, Windows and Linux (incl. printing, drag & drop)
